# AdbAutoPlayer

./: .gitignore  .pre-commit-config.yaml  ADBKEYBOARD_SETUP_GUIDE.md  BLUESTACKS_INVESTIGATION_REPORT.md  BLUESTACKS_QUICK_REFERENCE.md  BLUESTACKS_TECHNICAL_DETAILS.md  BLUESTACKS_WORKAROUNDS.md  BOOT_IMG_GUIDE.md  BOOT_IMG_SUMMARY.md  BOOT_PARTITION_ACCESS_REPORT.md  CLAUDE.md  DELIVERY_SUMMARY.txt  FILES_DELIVERED.txt  FRIDA_PERSISTENT_HOOKS.md  IMPLEMENTATION_DETAILS.md  INVESTIGATION_SUMMARY.md  KARROT_ACTIVITIES_MAP.md  KARROT_ACTIVITIES_QUICK_REFERENCE.md  KARROT_ACTIVITIES_SUMMARY.txt  KARROT_DOCUMENTATION_INDEX.md  KOREAN_INPUT_QUICKSTART.md  KOREAN_INPUT_SETUP_SUMMARY.md  QUICK_START.md  README-Action-Recording.md  README-Checkpoint-Integration.md  README-Guitar-Girl-Enhanced.md  README-Guitar-Girl-Phase3.md  README-Magisk-Installation.md  README-Workflow-Chaining.md  README-YOLO-Integration.md  README.md  README_BLUESTACKS_INVESTIGATION.md  README_BOOT_IMAGES.md  README_KOREAN_INPUT.md  SETUP_CHECKLIST.md  boot_img_urls.txt  build_twrp_gta9wifi.sh  download_boot_simple.py  get_boot_img.py  monitoring.db  (+2 more)
adbautoplayer/: README.md  package.json  pnpm-lock.yaml  pyproject copy.toml  pyproject.toml  pytauri-bootstrap.cjs  set-version.cjs  svelte.config.js
adbautoplayer/.github/: dependabot.yml
adbautoplayer/.github/workflows/: lychee-link-checking.yml  mdbook.yml  publish.yaml
adbautoplayer/_config/: INSTALL.md  PROJECT-TREE-RULES.md  README.md  SUPERDISCO-GUIDE.md
adbautoplayer/adb_auto_player.egg-info/: PKG-INFO  SOURCES.txt
adbautoplayer/docs/: book.toml
adbautoplayer/docs/src/development/: dev-and-build.md  frontend-README.md
adbautoplayer/docs/src/user-guide/: emulator-settings.md  macos-setup.md  real-phone-guide.md  troubleshoot.md  windows-setup.md
adbautoplayer/scripts/linux/: build.sh
adbautoplayer/scripts/macos/: build.sh
adbautoplayer/scripts/windows/: build.ps1
adbautoplayer/src/: app.css  app.html
adbautoplayer/src-tauri/: Cargo.toml  pyproject.toml  tauri.bundle.json
adbautoplayer/src-tauri/Settings/: ADB.toml
adbautoplayer/src-tauri/capabilities/: desktop.json
adbautoplayer/src-tauri/src/: lib.rs  settings.rs  tray.rs  window.rs
adbautoplayer/src-tauri/src-python/adb_auto_player/: __main__.py
adbautoplayer/src-tauri/src-python/adb_auto_player/commands/: debug.py
adbautoplayer/src-tauri/src-python/adb_auto_player/game/: game.py
adbautoplayer/src-tauri/src-python/adb_auto_player/ocr/: tesseract_backend.py
adbautoplayer/src-tauri/src-python/adb_auto_player/tauri_context/: cache.py
adbautoplayer/src-tauri/src-python/adb_auto_player/template_matching/: template_matcher.py
adbautoplayer/src-tauri/src-python/adb_auto_player/util/: string_helper.py  summary_generator.py
adbautoplayer/src-tauri/src-python/adb_auto_player/workflows/: multi_game_orchestrator.py  workflow_examples.py  workflow_utils.py
adbautoplayer/src-tauri/src-python/tests/: test_device_stream.py  test_game.py
adbautoplayer/src-tauri/src-python/tests/image_manipulation/: test_color.py  test_cropping.py
adbautoplayer/src-tauri/src-python/tests/models/: test_confidence_value.py
adbautoplayer/src-tauri/src-python/tests/template_matching/: test_template_matching_find_template_match.py  test_template_matching_integration.py
adbautoplayer/src-tauri/src-python/tests/utils/: test_settings_loader.py  test_traceback_helper.py
adbautoplayer/src/AdbAutoPlayer_MoAI_Workspace.egg-info/: PKG-INFO  SOURCES.txt
adbautoplayer/src/adb_auto_player.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
adbautoplayer/src/client/: _apiTypes.d.ts
adbautoplayer/src/lib/: stores.ts
adbautoplayer/src/lib/components/form/: AlnumGroupedCheckboxArray.svelte  CheckboxArray.svelte  ImageCheckboxArray.svelte  SchemaForm.svelte  StringArray.svelte  TaskList.svelte
adbautoplayer/src/lib/components/generic/: TextDisplayCard.svelte
adbautoplayer/src/lib/components/log/: ActiveLogDisplayCard.svelte
adbautoplayer/src/lib/i18n/: i18n.ts  jp_afk_journey.json  locales.ts  vn.json
adbautoplayer/src/lib/log/: eventNames.ts  log-events.ts
adbautoplayer/src/lib/menu/: model.ts
adbautoplayer/src/lib/toast/: toast-error.ts
adbautoplayer/src/lib/types/: form.ts
adbautoplayer/src/lib/utils/: posthog.ts  settings.ts
adbautoplayer/src/routes/: +layout.svelte  +page.svelte
(+770 files in other folders)
